# radcpp

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  vcpkg-configuration.json  vcpkg.json
MLCore/: Backend.cpp  Backend.h  CMakeLists.txt  Common.cpp  Common.h  Context.cpp  Context.h  Device.cpp  Device.h  Global.cpp  Global.h  Logging.cpp  Logging.h  MLCore.h  Tensor.cpp  Tensor.h  TensorIterator.cpp  TensorIterator.h  TensorView.cpp  TensorView.h
MLCore/CPU/: CpuBackend.cpp  CpuBackend.h  CpuContext.cpp  CpuContext.h  CpuDevice.cpp  CpuDevice.h  CpuTensor.cpp  CpuTensor.h  CpuTensorIterator.h  CpuTensorOp.cpp  CpuTensorOp.h
MLCore/Vulkan/: VulkanBackend.cpp  VulkanBackend.h  VulkanContext.cpp  VulkanContext.h  VulkanDevice.cpp  VulkanDevice.h  VulkanTensor.cpp  VulkanTensor.h  VulkanTensorOp.cpp  VulkanTensorOp.h
MLCore/Vulkan/Shaders/: compile_shaders.py
MLCore/Vulkan/Shaders/Common/: Complex.h  DataType.h
MLCore/Vulkan/Shaders/TensorOp/: DataType.h  ElementWiseBinary.comp  ElementWiseUnary.comp  ForEach.comp
MLTests/: CMakeLists.txt  TensorIteratorTest.cpp  TensorOpElementWise.cpp  TensorOpElementWiseBinary.cpp  TensorOpElementWiseTest.cpp  main.cpp
SDFramework/: CMakeLists.txt
SDFramework/Core/: Application.cpp  Application.h  Common.cpp  Common.h  EventHandler.cpp  EventHandler.h  Timer.cpp  Timer.h
SDFramework/Gui/: Frame.cpp  Frame.h  GuiContext.cpp  GuiContext.h  Renderer.cpp  Renderer.h  Surface.cpp  Surface.h  Texture.cpp  Texture.h  VulkanContext.cpp  VulkanContext.h  VulkanFrame.cpp  VulkanFrame.h  VulkanGuiContext.cpp  VulkanGuiContext.h  VulkanWindow.cpp  VulkanWindow.h  Window.cpp  Window.h
SDFramework/Media/: Audio.cpp  Audio.h  AudioMixer.cpp  AudioMixer.h  Camera.cpp  Camera.h
SDFramework/Multimedia/: Audio.cpp  AudioMixer.cpp  AudioMixer.h  Camera.cpp
SDFramework/RHI/: GpuBuffer.cpp  GpuBuffer.h  GpuCommandBuffer.cpp  GpuCommandBuffer.h  GpuDevice.cpp  GpuDevice.h  GpuShader.cpp  GpuShader.h  GpuTexture.cpp  GpuTexture.h
SDFramework/Rendering/: VulkanTexture.cpp  VulkanTexture.h
cmake/: CompilerOptions.cmake  Sanitizers.cmake  radSanitizers.cmake  radcppCompileOptions.cmake  radcppConfig.cmake.in
hipx/: CMakeLists.txt  README.md  test.hip
hipx/hipx/: test.cpp
hipx/hipx/Core/: HipContext.cpp  HipContext.h  HipDevice.cpp  HipDevice.h  HipError.h
imported/imgui/: CMakeLists.txt  imconfig.h
imported/reflect-cpp/: CMakeLists.txt
rad/: CMakeLists.txt  Config.h.in  Integer.cpp  Integer.h  Platform.cpp  Platform.h  test.cpp
rad/Algorithm/: Sort.h
rad/Common/: Algorithm.h  BFloat16.cpp  Flags.h  Float.cpp  Float.h  Float16.cpp  Float8.cpp  Ignore.h  Integer.cpp  Integer.h  Iterator.h  Literals.h  Math.cpp  Math.h  Memory.cpp  Memory.h  Numeric.cpp  Numeric.h  Platform.cpp  Platform.h  Random.cpp  Random.h  RefCounted.h  String.cpp  String.h  ThreadPool.cpp  ThreadPool.h  TypeTraits.h  Utility.cpp  Utility.h
rad/Container/: ArrayRef.h  SmallVector.h  Span.h  Vector.h
rad/Core/: Algorithm.h  BFloat16.cpp  BFloat16.h  Float.cpp  Float.h  Float16.cpp  Float16.h  Float8.cpp  Format.cpp  Format.h  Integer.cpp  Integer.h  Literals.h  Math.cpp  Math.h  Numeric.cpp  Platform.h  Random.cpp  Random.h  RefCounted.h  String.cpp  String.h  ThreadPool.cpp  ThreadPool.h  TypeTraits.h
rad/Geometry/: Circle.h  Line.cpp  Line.h  Point.cpp  Point.h  Sphere.cpp  Sphere.h  Triangle.cpp  Triangle.h
rad/IO/: Compression.cpp  Compression.h  File.cpp  File.h  FileSystem.cpp  FileSystem.h  Format.cpp  Format.h  Image.cpp  Image.h  Json.cpp  Json.h  Logging.cpp  Logging.h  Table.cpp  Table.h
rad/ML/: MLContext.cpp  MLContext.h  MLCpuContext.cpp  MLCpuContext.h  MLCpuDevice.cpp  MLCpuDevice.h  MLCpuOp.cpp  MLCpuOp.h  MLCpuTensor.cpp  MLCpuTensor.h  MLCpuTensorIterator.h  MLCpuTensorOp.cpp  MLCpuTensorOp.h  MLDataType.cpp  MLDataType.h  MLDevice.cpp  MLDevice.h  MLTensor.cpp  MLTensor.h  MLTensorIterator.h  MLTensorOptions.h
rad/System/: Application.cpp  Application.h  CpuInfo.cpp  CpuInfo.h  OS.cpp  OS.h  Thread.cpp  Thread.h  Time.cpp  Time.h
rad_tests/: CMakeLists.txt  ContainerTest.cpp  ExecutionTest.cpp  FloatTest.cpp  GeometryTest.cpp  IteratorTest.cpp  MemoryTest.cpp  TableFormatterTest.cpp  TableTest.cpp  TaskflowTest.cpp  main.cpp
samples/Painter/: CMakeLists.txt  MainMenu.cpp  MainMenu.h  MainWindow.cpp  MainWindow.h  PaintManager.cpp  PaintManager.h  Painter.cpp  Painter.h  Widget.cpp  Widget.h  main.cpp
samples/vkcube/: CMakeLists.txt  CubeDemo.cpp  CubeDemo.h  Version.h  main.cpp
samples/vksamples/: CMakeLists.txt  main.cpp
samples/vksamples/Common/: Sample.cpp  Sample.h
samples/vksamples/Cube/: CubeDemo.cpp  CubeDemo.h  CubeMesh.inc
tests/: CMakeLists.txt  ExecutionTest.cpp  IntegerTest.cpp  StringTest.cpp  TimeTest.cpp  VulkanTest.cpp  main.cpp
tests/Core/: ExecutionTest.cpp  Integer.cpp  IntegerTest.cpp  ReflectionTest.cpp  StringTest.cpp
tests/HelloVulkan/: CMakeLists.txt  TestTensor.cpp  main.cpp
tests/HelloWorld/: CMakeLists.txt  ContainerTest.cpp  FloatTest.cpp  MemoryTest.cpp  main.cpp
tests/rad/: CMakeLists.txt  ContainerTest.cpp  ExecutionTest.cpp  IntegerTest.cpp  MLTensorTest.cpp  StackTraceTest.cpp
tests/vkpp/: CMakeLists.txt  SlangTest.cpp  TensorTest.cpp
vkpp/: CMakeLists.txt  README.md
vkpp/Compute/: HostTensor.cpp  HostTensor.h  Tensor.cpp  Tensor.h  TensorIterator.h  TensorOp.cpp  TensorOp.h
vkpp/Core/: Buffer.cpp  Buffer.h  Command.cpp  Command.h  Common.cpp  Common.h  Descriptor.cpp  Descriptor.h  Device.cpp  Device.h  Event.cpp  Event.h  Fence.cpp  Fence.h  Framebuffer.cpp  Framebuffer.h  Image.cpp  Image.h  Instance.cpp  Instance.h  Pipeline.cpp  Pipeline.h  RenderPass.cpp  RenderPass.h  Sampler.cpp  Sampler.h  Semaphore.cpp  Semaphore.h  ShaderCompiler.cpp  ShaderCompiler.h  ShaderIncluder.h  ShaderMacro.h  SlangSession.cpp  SlangSession.h  Surface.cpp  Surface.h  Swapchain.cpp  Swapchain.h
vkpp/Shaders/Common/: HLSL2GLSL.h  Hash.h  Packing.h
vkpp/Shaders/TensorOp/: DataType.h  ElementWiseUnary.comp  ElementWiseUnary4D.comp
vkpp_tests/: CMakeLists.txt
(+76 files in other folders)
